--- a/sql-part5.ipynb
+++ b/sql-part5.ipynb
@@ -34,13 +34,33 @@
         {
             "cell_type": "code",
             "source": [
-                ""
+                "CREATE TABLE planned_makes (\r\n",
+                "    project_id INT PRIMARY KEY IDENTITY (1,1),\r\n",
+                "    book_ideas VARCHAR(50),\r\n",
+                "    travel_plans VARCHAR(50),\r\n",
+                "    house_projects VARCHAR(50)\r\n",
+                ");"
             ],
             "metadata": {
-                "azdata_cell_guid": "d9238911-6f81-4f01-980d-b584307effaf"
+                "azdata_cell_guid": "d9238911-6f81-4f01-980d-b584307effaf",
+                "language": "sql"
             },
-            "outputs": [],
-            "execution_count": null
+            "outputs": [
+                {
+                    "output_type": "error",
+                    "evalue": "Msg 262, Level 14, State 1, Line 1\r\nCREATE TABLE permission denied in database 'master'.",
+                    "ename": "",
+                    "traceback": []
+                },
+                {
+                    "output_type": "display_data",
+                    "data": {
+                        "text/html": "Total execution time: 00:00:00.091"
+                    },
+                    "metadata": {}
+                }
+            ],
+            "execution_count": 1
         },
         {
             "cell_type": "markdown",
@@ -57,7 +77,8 @@
                 ""
             ],
             "metadata": {
-                "azdata_cell_guid": "e7cff9cb-87ba-4c7b-98f2-eaf445e8719c"
+                "azdata_cell_guid": "e7cff9cb-87ba-4c7b-98f2-eaf445e8719c",
+                "language": "sql"
             },
             "outputs": [],
             "execution_count": null
@@ -80,7 +101,8 @@
                 ""
             ],
             "metadata": {
-                "azdata_cell_guid": "7409c695-9581-4ad8-b03a-574d2c4c87cb"
+                "azdata_cell_guid": "7409c695-9581-4ad8-b03a-574d2c4c87cb",
+                "language": "sql"
             },
             "outputs": [],
             "execution_count": null
@@ -102,7 +124,8 @@
                 ""
             ],
             "metadata": {
-                "azdata_cell_guid": "749c748f-19b5-4c69-9004-b6b20216616a"
+                "azdata_cell_guid": "749c748f-19b5-4c69-9004-b6b20216616a",
+                "language": "sql"
             },
             "outputs": [],
             "execution_count": null
@@ -125,7 +148,8 @@
                 ""
             ],
             "metadata": {
-                "azdata_cell_guid": "b3c7f6ea-ee26-46b3-9c2a-2f7a82c39699"
+                "azdata_cell_guid": "b3c7f6ea-ee26-46b3-9c2a-2f7a82c39699",
+                "language": "sql"
             },
             "outputs": [],
             "execution_count": null
